--- a/themes/butterfly/source/css/_page/404.styl
+++ b/themes/butterfly/source/css/_page/404.styl
@@ -1,69 +1,144 @@
-if hexo-config('error_404.enable')
-  .error404
-    #error-wrap
-      position: absolute
-      top: 50%
-      right: 0
-      left: 0
-      margin: 0 auto
-      padding: 60px 20px 0
-      max-width: 1000px
-      transform: translate(0, -50%)
+#body-wrap.error
+  display flex
+  flex-direction column
+  justify-content center
+  align-items center
+  padding 50px 1rem 1rem
+  position relative
 
-      .error-content
-        @extend .cardHover
-        overflow: hidden
-        margin: 0 20px
-        height: 360px
+  +maxWidth768()
+    padding-top 0
+
+  #error-wrap
+    display flex
+    justify-content center
+    margin 0 1rem
+    width 100%
+    position relative
+
+    .error-content
+      display flex
+      flex-direction row
+      justify-content center
+      align-items center
+      margin 0 1rem
+      height 18rem
+      max-width 800px
+      background var(--efu-card-bg)
+      transition all .3s ease 0s
+      border var(--style-border-always)
+      position relative
+      width 100%
+      box-shadow none
+      border-radius 12px
+
+      +maxWidth768()
+        flex-direction column
+        margin 0
+        height 25rem
+        width 100%
+
+      .error-img
+        flex 1 1 0
+        height 100%
+        width 600px
+        border-radius 8px 0 0 8px
+        background-color var(--efu-main)
+        background-position center
+        background-size cover
 
         +maxWidth768()
-          margin: 0
-          height: 500px
+          flex 1 1 0
+          width 100%
+          border-radius 12px
 
-        .error-img
-          display: inline-block
-          overflow: hidden
-          width: 50%
-          height: 100%
+      .error-info
+        flex 1 1 0
+        padding .5rem
+        text-align center
+        font-size 14px
+        font-family $font-family
 
-          +maxWidth768()
-            width: 100%
-            height: 45%
+        +maxWidth768()
+          width 100%
+          padding-bottom 2rem
 
-          img
-            @extend .imgHover
-            background-color: $theme-color
-
-        .error-info
-          display: inline-flex
-          flex-direction: column
-          justify-content: center
-          align-content: center
-          width: 50%
-          height: 100%
-          vertical-align: top
-          text-align: center
-
-          if $site-name-font
-            font-family: $site-name-font
+        .error_title
+          font-size 9em
+          line-height 1
 
           +maxWidth768()
-            width: 100%
-            height: 55%
+            font-size 4rem
 
-          .error_title
-            margin-top: -.6em
-            font-size: 9em
+        .error_subtitle
+          word-break break-word
+          font-size 1.6em
+          -webkit-line-clamp 2
 
-            +maxWidth768()
-              font-size: 8em
+        a
+          display inline-block
+          margin-top .5rem
+          padding .3rem 1.5rem
+          background var(--btn-bg)
+          color var(--btn-color)
 
-          .error_subtitle
-            @extend .limit-more-line
-            margin-top: -3em
-            word-break: break-word
-            font-size: 1.6em
-            -webkit-line-clamp: 2
+          &:hover
+            background var(--efu-theme)
 
-    & + #rightside
-      display: none
+          i
+            font-size 16px
+            padding-right .3rem
+
+  .aside-list
+    display flex
+    flex-direction row
+    flex-wrap nowrap
+    margin 1rem
+    max-width 100%
+
+    +maxWidth768()
+      padding-top 0
+      margin 0
+
+    .aside-list-group
+      display flex
+      flex-direction row
+      flex-wrap wrap
+      max-width 800px
+      margin 0 auto
+      justify-content space-between
+
+    .aside-list-item
+      padding .5rem 0
+      width 49%
+
+      img
+        width 100%
+        object-fit cover
+        border-radius 12px
+
+      .thumbnail
+        overflow hidden
+        width 100%
+        height 200px
+        background var(--efu-card-bg)
+        display flex
+
+        +maxWidth768()
+          height 100px
+
+      .content .title
+        -webkit-line-clamp 2
+        overflow hidden
+        display -webkit-box
+        -webkit-box-orient vertical
+        line-height 1.5
+        justify-content center
+        align-items flex-end
+        align-content center
+        padding-top .5rem
+        font-size 16px
+        font-weight 700
+
+      .content time
+        display none
