--- a/themes/butterfly/layout/includes/404.pug
+++ b/themes/butterfly/layout/includes/404.pug
@@ -1,24 +1,33 @@
-#body-wrap.error404
-  include ./header/index.pug
+- var top_img = theme.error_404.background || theme.default_top_img
+- var bg_img = `background-image: url('${url_for(top_img)}')`
 
+#body-wrap.error
   #error-wrap
     .error-content
-      .error-img(style=`background-image: url(${url_for(theme.error_404.background)})`)
+      .error-img(style=bg_img)
       .error-info
-        h1.error_title 404
-          .error_subtitle= theme.error_404.subtitle
-            a.button--animated(href=url_for("/"))
-              i.fas.fa-arrow-up-right-from-square
-                    =_p('404.button')
+        h1.error_title=_p('404')
+        .error_subtitle= theme.error_404.subtitle
+        a.button--animated(href='/')
+          i.fas.fa-rocket
+          = _p('返回主页')
 
-  if theme.error_404.recommendList
-    .aside-list
-      .aside-list-group
-        each post, index in site.posts.sort('-date').data.slice(0, 6)
-          if index >= 5
-            break
-          .aside-list-item
-            a.thumbnail(href=url_for(post.path), title=post.title)
-              img(src=url_for(post.cover), alt=post.title)
-            .content
-              a.title(href=url_for(post.path), title=post.title)= post.title
+  .aside-list
+    .aside-list-group
+      - let postLimit = 5
+      - let sort = 'date'
+      - site.posts.sort(sort, -1).limit(postLimit).each(function(article){
+      - let link = article.link || article.path
+      - let title = article.title || _p('no_title')
+      - let post_cover = article.cover
+      .aside-list-item
+        if post_cover
+          a.thumbnail(href=url_for(link) title=title)
+            img(src=url_for(post_cover) onerror=`this.onerror=null;this.src='${url_for(theme.default_img)}'` alt=title)
+        .content
+          a.title(href=url_for(link) title=title)= title
+          if theme.aside.card_recent_post.sort === 'updated'
+            time(datetime=date_xml(article.updated) title=_p('post.updated') + ' ' + full_date(article.updated)) #[=date(article.updated, config.date_format)]
+          else
+            time(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date)) #[=date(article.date, config.date_format)]
+      - })
