--- a/themes/butterfly/layout/includes/hometop.pug
+++ b/themes/butterfly/layout/includes/hometop.pug
@@ -11,15 +11,13 @@
               span.category_button_text 2022
               i.fas.fa-lightbulb
       .top_post_group
-        //- 这下面是原来固定的写法
-        //- if site.data.slider
-        //-   each i in site.data.slider
-        //-     .top_post_item
-        //-       .post_cover
-        //-         a(href=url_for(i.link) title=i.title)
-        //-           img.post_bg.entered.loaded(src=url_for(i.cover))
-        //-           .post_cover_info
-        //-             p.post_cover_text= i.description
-        //-       .post_info(onclick=`"window.open(`+url_for(i.link)+`,"_self")"`)
-        //-         a.article-title(href=url_for(i.link) title=i.title)= i.title
-       script(src='./hometop.js')
+        if site.data.slider
+          each i in site.data.slider
+            .top_post_item
+              .post_cover
+                a(href=url_for(i.link) title=i.title)
+                  img.post_bg.entered.loaded(src=url_for(i.cover))
+                  .post_cover_info
+                    p.post_cover_text= i.description
+              .post_info(onclick=`"window.open(`+url_for(i.link)+`,"_self")"`)
+                a.article-title(href=url_for(i.link) title=i.title)= i.title
