--- a/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
@@ -57,32 +57,23 @@ div#banners {
     border-image: initial;
     background: rgba(255, 255, 255, 0.67)!important;
 }
-/* 6.HOMETOP 移动端部分适配 */
-.right-arrow-tip {
-    right: 0;
-    opacity: 1;
-    padding: 0 4px 0 2px;
+/* 6.滚动条调整适配 */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
 }
 
-.left-arrow-tip {
-    left: 0;
-    opacity: 0;
-    padding: 0 2px 0 4px;
+::-webkit-scrollbar-thumb {
+    background-color: #e58a8a;
+    background-image: -webkit-linear-gradient( 45deg, rgba(255, 255, 255, 0.4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 75%, transparent 75%, transparent);
+    border-radius: 2em;
 }
 
-.left-arrow-tip, .right-arrow-tip {
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: opacity .3s ease;
-    overflow: hidden;
-    -webkit-transition: opacity .3s ease;
-    -moz-transition: opacity .3s ease;
-    -ms-transition: opacity .3s ease;
-    -o-transition: opacity .3s ease;
-    font-size: 15px;
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
+::-moz-selection {
+    color: #fff;
+    background-color: #e58a8a;
 }
