--- a/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
@@ -81,6 +81,17 @@ div#banners {
 summary {
     background: #e8fafe;
 }
+summary {
+    cursor: pointer;
+    padding: 16px;
+    margin: -16px;
+    border-radius: 4px;
+    color: rgba(68, 68, 68, 0.7);
+    font-size: 0.875rem !important;
+    font-weight: bold;
+    position: relative;
+    line-height: normal;
+}
 /* 8.文章页面整体修改 */
 #post {
     border: 2px solid rgba(0, 255, 255, .6);
