--- a/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
@@ -95,6 +95,22 @@ summary {
     position: relative;
     line-height: normal;
 }
+details {
+    display: block;
+    padding: 16px;
+    margin: 1em 0;
+    border-radius: 4px;
+    background: #fff;
+    font-size: var(--global-font-size);
+    transition: all 0.28s ease;
+    -moz-transition: all 0.28s ease;
+    -webkit-transition: all 0.28s ease;
+    -o-transition: all 0.28s ease;
+    border: 1px solid #f6f6f6;
+}
+details {
+    border-color: #e8fafe;
+}
 /* 8.文章页面整体修改 */
 #post {
     border: 2px solid rgba(0, 255, 255, .6);
