--- a/themes/butterfly/layout/includes/head.pug
+++ b/themes/butterfly/layout/includes/head.pug
@@ -23,6 +23,7 @@ meta(name ="format-detection" content="telephone=no")
 meta(name="theme-color" content=themeColor)
 #web_bg
 #svg_bg
+.js-pjax
 
 //- Open_Graph
 include ./head/Open_Graph.pug
