--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -221,7 +221,7 @@
 }
 @media screen and (max-width: 768px) {
     .essay-mini {
-        padding: 0;
+        width: auto;
         margin: 0;
     }
 }
