--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -225,11 +225,25 @@
     .essay-mini {
         width: auto;
         margin: 0;
-        margin-bottom: 10px
+        margin-bottom: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 @media screen and (max-width: 900px) {
     .essay-mini {
+        width: auto;
+        margin: 0;
+        margin-bottom: 10px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .essay-mini {
+        width: auto;
+        margin: 0;
+        margin-bottom: 10px;
         padding-left: 15px;
         padding-right: 15px;
     }
