--- a/themes/butterfly/layout/includes/layout.pug
+++ b/themes/butterfly/layout/includes/layout.pug
@@ -23,7 +23,7 @@ html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside
           if theme.jike.enable && theme.jike.home_mini
             include ./jike_mini.pug
           if theme.essay.enable && theme.essay.home_mini
-            include ./bbTimeList.pug
+            include ./bbtimelist.pug
         include ./hometop.pug
 
         main#content-inner.layout(class=hideAside)
