--- a/themes/butterfly/source/css/_sxiaohe-style/404/heo.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/404/heo.css
@@ -35,8 +35,7 @@
     flex: 1 1 0%;
     height: 90%;
     width: 600px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+    border-radius: 8px;
     background-color: #307af6;
     background-position: center center;
     background-size: cover
