--- a/themes/butterfly/layout/category.pug
+++ b/themes/butterfly/layout/category.pug
@@ -3,7 +3,7 @@ extends includes/layout.pug
 block content
   if theme.category_ui == 'index'
     include ./includes/mixins/post-ui.pug
-    #recent-posts.recent-posts.
+    #recent-posts.recent-posts
       #category-bar.category-bar
         include includes/categoryBar.pug
       #categories-chart(data-parent="true" style="border-radius: 8px; height: 300px; padding: 10px;")
@@ -12,6 +12,7 @@ block content
   else
     include ./includes/mixins/article-sort.pug
     #category
+      #categories-chart(data-parent="true" style="border-radius: 8px; height: 300px; padding: 10px;")
       .article-sort-title= _p('page.category') + ' - ' + page.category
       +articleSort(page.posts)
       include includes/pagination.pug
