--- a/themes/butterfly/layout/category.pug
+++ b/themes/butterfly/layout/category.pug
@@ -6,13 +6,13 @@ block content
     #recent-posts.recent-posts
       #category-bar.category-bar
         include includes/categoryBar.pug
-      #categories-chart(data-parent="true" style="border-radius: 8px; height: 300px; padding: 10px;")
+      #categories-chart(data-parent="true" style="height: 300px; padding: 10px;")
       +postUI
       include includes/pagination.pug
   else
     include ./includes/mixins/article-sort.pug
     #category
-      #categories-chart(data-parent="true" style="border-radius: 8px; height: 300px; padding: 10px;")
+      #categories-chart(data-parent="true" style="height: 300px; padding: 10px;")
       .article-sort-title= _p('page.category') + ' - ' + page.category
       +articleSort(page.posts)
       include includes/pagination.pug
