--- a/themes/butterfly/layout/tag.pug
+++ b/themes/butterfly/layout/tag.pug
@@ -4,12 +4,13 @@ block content
   if theme.tag_ui == 'index'
     include ./includes/mixins/post-ui.pug
     #recent-posts.recent-posts
-      #tags-chart(data-length="10" style="border-radius: 8px; height: 300px; padding: 10px;")
+      #tags-chart(data-length="10" style="height: 300px; padding: 10px;")
       +postUI
       include includes/pagination.pug
   else
     include ./includes/mixins/article-sort.pug
     #tag
+      #tags-chart(data-length="10" style="height: 300px; padding: 10px;")
       .article-sort-title= _p('page.tag') + ' - ' + page.tag
       +articleSort(page.posts)
       include includes/pagination.pug
