--- a/themes/butterfly/layout/category.pug
+++ b/themes/butterfly/layout/category.pug
@@ -1,11 +1,9 @@
-extends includes/noaside.pug
+extends includes/layout.pug
 
 block content
   if theme.category_ui == 'index'
     include ./includes/mixins/post-ui.pug
     #recent-posts.recent-posts
-      #category-bar.category-bar
-        include includes/categoryBar.pug
       +postUI
       include includes/pagination.pug
   else
