--- a/themes/butterfly/source/css/_sxiaohe-style/style/index.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/index.css
@@ -132,3 +132,6 @@
 .card-widget.card-friend-link summary.card-friend-class-desc {
     padding: 0 15px;
 }
+#page h1.page-title {
+    margin: -20px 0 -14px!important;
+}
