--- a/themes/butterfly/layout/includes/head.pug
+++ b/themes/butterfly/layout/includes/head.pug
@@ -22,6 +22,7 @@ meta(name="copyright" content=pageCopyright)
 meta(name ="format-detection" content="telephone=no")
 meta(name="theme-color" content=themeColor)
 <link rel="manifest" href="/manifest.json">
+link(rel='preload', href='/css/index.css', as='style')
 #web_bg
 #svg_bg
 .js-pjax
