--- a/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
+++ b/themes/butterfly/source/css/_sxiaohe-style/style/tool.css
@@ -62,23 +62,23 @@ div#banners {
 }
 /* 6.滚动条调整适配 */
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+    width: 10px!important;
+    height: 10px!important;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #e58a8a;
-    background-image: -webkit-linear-gradient( 45deg, rgba(255, 255, 255, 0.4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 75%, transparent 75%, transparent);
-    border-radius: 2em;
+    background-color: #e58a8a!important;
+    background-image: -webkit-linear-gradient( 45deg, rgba(255, 255, 255, 0.4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 75%, transparent 75%, transparent)!important;
+    border-radius: 2em!important;
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: transparent;
+    background-color: transparent!important;
 }
 
 ::-moz-selection {
-    color: #fff;
-    background-color: #e58a8a;
+    color: #fff!important;
+    background-color: #e58a8a!important;
 }
 /* 7.文章页面整体修改 */
 #post {
