--- a/themes/butterfly/layout/includes/head.pug
+++ b/themes/butterfly/layout/includes/head.pug
@@ -21,6 +21,7 @@ meta(name="author" content=pageAuthor)
 meta(name="copyright" content=pageCopyright)
 meta(name ="format-detection" content="telephone=no")
 meta(name="theme-color" content=themeColor)
+script(data-pjax src=url_for(theme.asset.jquery))
 #web_bg
 #svg_bg
 .js-pjax
@@ -43,6 +44,7 @@ if (theme.pwa && theme.pwa.enable)
 
 //- main css
 link(rel='stylesheet', href=url_for(theme.asset.main_css) media="print" onload="this.media='all'")
+link(rel='stylesheet', href=url_for(theme.asset.echarts) media="print" onload="this.media='all'")
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
 
 if (theme.snackbar && theme.snackbar.enable)
